--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,20 @@
   box-sizing: border-box;
 }
 
+a {
+  color: blue;
+  text-decoration: none; /* no underline */
+}
+
+button {
+  outline: none;
+  border: none;
+  background: none;
+}
+
 body {
   display: flex;
   justify-content: center;
-  min-height: 100vh;
+  align-items: center;
   font-family: "Roboto", sans-serif, cursive;
 }
