--- a/src/components/UserDetails/UserDetails.styles.scss
+++ b/src/components/UserDetails/UserDetails.styles.scss
@@ -8,18 +8,20 @@
   height: 50vh;
   padding: 15px;
   margin-top: 25%;
+  border-radius: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  overflow: hidden;
   p {
     color: #002244;
     text-align: center;
     font-size: 16px;
-    margin-bottom: 2px;
+    margin-bottom: 4px;
   }
   .user-img {
     border-radius: 50%;
-    height: 120px;
-    width: 120px;
+    min-height: 120px;
+    min-width: 120px;
     overflow: hidden;
     display: flex;
     justify-content: center;
