--- a/src/components/UserDetails/UserDetails.styles.scss
+++ b/src/components/UserDetails/UserDetails.styles.scss
@@ -9,9 +9,10 @@
   padding: 15px;
   margin-top: 25%;
   border-radius: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   overflow: hidden;
+  overflow-wrap: break-all;
   p {
     color: #002244;
     text-align: center;
@@ -35,5 +36,9 @@
   }
   .user-email {
     color: #a3c1ad;
+    &:hover {
+      cursor: pointer;
+      color: #00ccff;
+    }
   }
 }
