--- a/src/components/UserDetails/UserDetails.styles.scss
+++ b/src/components/UserDetails/UserDetails.styles.scss
@@ -4,15 +4,13 @@
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  width: 50vw;
-  height: 50vh;
+  width: 90%;
   padding: 15px;
   margin-top: 25%;
   border-radius: 10px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   overflow: hidden;
-  overflow-wrap: break-all;
   p {
     color: #002244;
     text-align: center;
