--- a/src/components/UsersList/UserList.styles.scss
+++ b/src/components/UsersList/UserList.styles.scss
@@ -1,4 +1,7 @@
 .search-user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50%;
   margin: 20px auto;
   input {
@@ -18,6 +21,20 @@
       color: #00ccff;
     }
   }
+  .search-icon {
+    position: absolute;
+    left: 70%;
+    margin-right: 10px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  @media screen and (max-width: 580px) {
+    width: 75%;
+  }
+  @media screen and (max-width: 980px) {
+    width: 60%;
+  }
 }
 .user-list-container {
   display: flex;
@@ -26,5 +43,4 @@
   justify-content: center;
   align-items: center;
   margin: 10px auto;
-  overflow-wrap: break-all;
 }
